# pdf2htmlEX-Android

./: .gitignore  .jitpack.yml  .travis.yml  CMakeLists.txt  EPCMake.cmake  EPHelpers.cmake  LICENSE  README.md  ThirdPartyConfig.cmake  UpcomingReleaseNotes.md  build.gradle  build_android.sh  doChangeNDK  dobuild  dobuilddependencies  doclean  doclean-idea  dodownloadtarballs  doincrementversion  getVersion.sh  gradle.properties  pdf2htmlEX.cmake.in  pkg-config.in  settings.gradle
.github/: FUNDING.yml  dependabot.yml  installAndroidTools.sh  installBuildDependencies.sh  prepareBuiltDependenciesForArtifacting.sh  prepareSampleAppForUnpublishedLib.sh
.github/conan/profiles/: android  android-21-armv7  android-21-armv8  android-21-x86  android-21-x86_64  android-armv7  android-armv8  android-x86  android-x86_64  default  pdf2htmlEX-config
.github/workflows/: android.yml  appRelease.yml  build.yml  buildInner.yml  debugBuild.yml  fullRelease.yml  incrementVersion.yml  manualVersionIncrement_major.yml  manualVersionIncrement_minor.yml  manualVersionIncrement_patch.yml  privilegedBuild.yml  release.yml  releaseBuild.yml  releasePublisher.yml  testInner.yml  unprivilegedBuild.yml
aar-instrumented-tester/: .gitignore  README.md  copyFilesFromMainProject.sh  settings.gradle
aar-instrumented-tester/pdf2htmlEX/: build.gradle
aar-instrumented-tester/pdf2htmlEX/src/main/: AndroidManifest.xml
android-lib/: settings.gradle
android-lib/app/: build.gradle
android-lib/app/src/main/: AndroidManifest.xml
android-lib/gradle/wrapper/: gradle-wrapper.properties
android-lib/pdf2htmlEX/: build.gradle
android-lib/pdf2htmlEX/src/main/cpp/: CMakeLists.txt  pdf2htmlEX.cc
android-libpdf2htmlex/: gradle.properties
android-libpdf2htmlex/app/: build.gradle
android-libpdf2htmlex/app/src/main/: AndroidManifest.xml
android-libpdf2htmlex/gradle/wrapper/: gradle-wrapper.properties
android-sample-app/: .gitignore  build.gradle  gradle.properties
android-sample-app/app/: .gitignore  build.gradle
android-sample-app/app/libs/: .gitignore
android-sample-app/app/src/main/: AndroidManifest.xml
android-sample-app/gradle/wrapper/: gradle-wrapper.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
application/: .gitignore  build.gradle
application/app/: build.gradle
application/app/src/main/: AndroidManifest.xml
ci-scripts/: browser_tests.py  emulator_matrix_generator.py  getVersion  incrementVersion  prepareLibraryTestsForStagingRepository  prepareSampleAppForStagingRepository  updateDownstreamVersion
ci-scripts/lib/: fileParser.pm  fileUpdater.pm  getVersion.pm  pathResolver.pm  repositoryInputParser.pm
dependency-builder/: .gitignore  build.gradle  dobuild
dependency-builder/lib/: .gitignore  build.gradle
dependency-builder/lib/src/main/: AndroidManifest.xml
dependency-builder/lib/src/main/cpp/: CMakeLists.txt  CompilerBinaries.cmake  CompilerFlags.cmake  EPCMake.cmake  EPHelpers.cmake  EPMeson.cmake  pkg-config-static.in
dependency-builder/src/main/: AndroidManifest.xml
dependency-builder/src/main/cpp/: .gitignore  CMakeLists.txt  CMakeToolchainWrapper.in  EPAutotools.cmake  EPCMake.cmake  EPFiletree.cmake  EPHelpers.cmake  EPMeson.cmake  EPTarball.cmake  Patch-Package-Install  Patch-Package-Source.sh  emptyProgram.cpp  meson_cross_file.txt.in  pkg-config-static.in  pkg-config.in
dependency-builder/src/main/cpp/tarballs/: README
licenseOnly/: .gitignore  build.gradle  settings.gradle
licenseOnly/FontForge/: build.gradle
licenseOnly/FontForge/src/main/: AndroidManifest.xml
licenseOnly/FreeType/: build.gradle
licenseOnly/FreeType/src/main/: AndroidManifest.xml
licenseOnly/FriBiDi/: build.gradle
licenseOnly/FriBiDi/src/main/: AndroidManifest.xml
licenseOnly/GLib/: build.gradle
licenseOnly/GLib/src/main/: AndroidManifest.xml
licenseOnly/HarfBuzz/: build.gradle
licenseOnly/HarfBuzz/src/main/: AndroidManifest.xml
licenseOnly/LCMS/: build.gradle
licenseOnly/LCMS/src/main/: AndroidManifest.xml
licenseOnly/LibTIFF/: build.gradle
licenseOnly/LibTIFF/src/main/: AndroidManifest.xml
licenseOnly/OpenJPEG/: build.gradle
licenseOnly/OpenJPEG/src/main/: AndroidManifest.xml
licenseOnly/SymbolAndZapfDingbatsFonts/: build.gradle
licenseOnly/cairo/: build.gradle
licenseOnly/cairo/src/main/: AndroidManifest.xml
licenseOnly/fontconfig/: build.gradle
licenseOnly/libexpat/: build.gradle
licenseOnly/libffi/: build.gradle
licenseOnly/libiconv/: build.gradle
licenseOnly/libjpeg-turbo/: build.gradle
licenseOnly/libpng/: build.gradle
licenseOnly/libtool/: build.gradle
licenseOnly/libuninameslist/: build.gradle
licenseOnly/libxml/: build.gradle
licenseOnly/pango/: build.gradle
licenseOnly/pdf2htmlEX/: build.gradle
licenseOnly/pdf2htmlEX-dependency-tree/: build.gradle
licenseOnly/pixman/: build.gradle
licenseOnly/poppler/: build.gradle
licenseOnly/poppler-data/: build.gradle
licenseOnly/proxy-libintl/: build.gradle
pdf2htmlEX/: .gitignore  CMakeLists.txt  build.gradle  conan_android_toolchain.cmake  conanfile.py  conanfile.txt
pdf2htmlEX/libs/: tmpfile-1.0.0.aar
pdf2htmlEX/src/androidTest/java/com/viliussutkus89/android/pdf2htmlex/: ConversionTests.java  EncryptedPdfTests.java  FontconfigInstrumentedTests.java  InstrumentedTests.java
pdf2htmlEX/src/main/: AndroidManifest.xml
pdf2htmlEX/src/main/assets/etc/fonts/: local.conf
pdf2htmlEX/src/main/cpp/: CMakeLists.txt  EnvVar.c  FontconfigAndroid.cc  nativeFontconfigInstrumentedTests.cpp  pdf2htmlEX.cc
pdf2htmlEX/src/main/java/app/opendocument/android/pdf2htmlex/: FontconfigAndroid.java  LegacyCleanup.java  pdf2htmlEX.java
pdf2htmlEX/src/main/java/com/viliussutkus89/android/pdf2htmlex/: AssetExtractor.java  EnvVar.java  FontconfigAndroid.java  LegacyCleanup.java  NativeConverter.java  pdf2htmlEX.java  pdf2htmlEX_exe.java
src/: DrawingTracer.cc  pdf2htmlEX.cc
src/HTMLRenderer/: font.cc  text.cc
src/public/: pdf2htmlEX.h
src/util/: ffw.c
tarballs/: README
(+59 files in other folders)
